package com.education.ztu.Task3;

public enum Location {
    KIEV, ZHYTOMYR, RIVNE, Lviv;
}
